added sign up button

--- a/public/views/login.hbs
+++ b/public/views/login.hbs
@@ -20,6 +20,7 @@
             <span class="mdl-textfield__error">{{ message }}</span>
           </div>
         </form>
+        <a href="store"><button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Sign Up</button></a>
       </div>
     </div>
   </main>
